{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 84,
  "lineage": "04085863-23e4-50f3-8f0d-ff7e9706b930",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-3tier-eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83f3405ac35541b",
            "arn": "arn:aws:ec2:us-west-2:166484520035:elastic-ip/eipalloc-0a83f3405ac35541b",
            "association_id": "eipassoc-0e0e1313d4d8dcf1e",
            "domain": "vpc",
            "id": "eipalloc-0a83f3405ac35541b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-018e6125b64d71e4b",
            "private_dns": "ip-10-0-1-132.us-west-2.compute.internal",
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-35-82-238-212.us-west-2.compute.amazonaws.com",
            "public_ip": "35.82.238.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-3tier-eip-nat"
            },
            "tags_all": {
              "Name": "demo-3tier-eip-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-3tier-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:internet-gateway/igw-0811ef366d7a88fc4",
            "id": "igw-0811ef366d7a88fc4",
            "owner_id": "166484520035",
            "tags": {
              "Name": "demo-3tier-igw"
            },
            "tags_all": {
              "Name": "demo-3tier-igw"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-3tier-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:loadbalancer/app/demo-3tier-alb/d334b792e033f00f",
            "arn_suffix": "app/demo-3tier-alb/d334b792e033f00f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-3tier-alb-1790254268.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:166484520035:loadbalancer/app/demo-3tier-alb/d334b792e033f00f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-3tier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05384f0de0a9179bc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0edcc8e6889ff3af0"
              },
              {
                "subnet_id": "subnet-0f848816edab75f04"
              }
            ],
            "subnets": [
              "subnet-0edcc8e6889ff3af0",
              "subnet-0f848816edab75f04"
            ],
            "tags": {
              "Name": "demo-3tier-alb"
            },
            "tags_all": {
              "Name": "demo-3tier-alb"
            },
            "vpc_id": "vpc-094de4ad00360b732",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_subnet.demo-3tier-public1",
            "aws_subnet.demo-3tier-public2",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo-3tier-alb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:listener/app/demo-3tier-alb/d334b792e033f00f/0dbe18c0940e4f46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:166484520035:listener/app/demo-3tier-alb/d334b792e033f00f/0dbe18c0940e4f46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:loadbalancer/app/demo-3tier-alb/d334b792e033f00f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo-3tier-alb",
            "aws_security_group.demo-3tier-alb-sg",
            "aws_subnet.demo-3tier-public1",
            "aws_subnet.demo-3tier-public2",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "demo-3tier-alb-listener-rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:targetgroup/demo-3tier-alb-tg/b63ef34333ad26ef",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:listener-rule/app/demo-3tier-alb/d334b792e033f00f/0dbe18c0940e4f46/d13fcad22195462b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:166484520035:listener-rule/app/demo-3tier-alb/d334b792e033f00f/0dbe18c0940e4f46/d13fcad22195462b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:listener/app/demo-3tier-alb/d334b792e033f00f/0dbe18c0940e4f46",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.demo-3tier-alb",
            "aws_lb_listener.demo-3tier-alb-listener-http",
            "aws_lb_target_group.demo-3tier-alb-tg",
            "aws_security_group.demo-3tier-alb-sg",
            "aws_subnet.demo-3tier-public1",
            "aws_subnet.demo-3tier-public2",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-3tier-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:166484520035:targetgroup/demo-3tier-alb-tg/b63ef34333ad26ef",
            "arn_suffix": "targetgroup/demo-3tier-alb-tg/b63ef34333ad26ef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:166484520035:targetgroup/demo-3tier-alb-tg/b63ef34333ad26ef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:166484520035:loadbalancer/app/demo-3tier-alb/d334b792e033f00f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-3tier-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-3tier-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a83f3405ac35541b",
            "association_id": "eipassoc-0e0e1313d4d8dcf1e",
            "connectivity_type": "public",
            "id": "nat-09b4f3b9595a8b303",
            "network_interface_id": "eni-018e6125b64d71e4b",
            "private_ip": "10.0.1.132",
            "public_ip": "35.82.238.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0edcc8e6889ff3af0",
            "tags": {
              "Name": "demo-3tier-nat"
            },
            "tags_all": {
              "Name": "demo-3tier-nat"
            }
          },
          "dependencies": [
            "aws_eip.demo-3tier-eip-nat",
            "aws_subnet.demo-3tier-public1",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "demo-3tier-route-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e77967340b5a5e6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09b4f3b9595a8b303",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e77967340b5a5e6e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demo-3tier-eip-nat",
            "aws_nat_gateway.demo-3tier-nat",
            "aws_route_table.demo-3tier-rt-private",
            "aws_subnet.demo-3tier-public1",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "demo-3tier-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0811ef366d7a88fc4",
            "id": "r-rtb-055df6300a69a0bc41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055df6300a69a0bc4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-3tier-igw",
            "aws_route_table.demo-3tier-rt-public",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-3tier-rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:route-table/rtb-0e77967340b5a5e6e",
            "id": "rtb-0e77967340b5a5e6e",
            "owner_id": "166484520035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09b4f3b9595a8b303",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-3tier-rt-private"
            },
            "tags_all": {
              "Name": "demo-3tier-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-3tier-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:route-table/rtb-055df6300a69a0bc4",
            "id": "rtb-055df6300a69a0bc4",
            "owner_id": "166484520035",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0811ef366d7a88fc4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-3tier-rt"
            },
            "tags_all": {
              "Name": "demo-3tier-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011da36d7f8e38aa9",
            "route_table_id": "rtb-0e77967340b5a5e6e",
            "subnet_id": "subnet-09b5128df38e2f5c0"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-private",
            "aws_subnet.demo-3tier-private1",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0613c9522e815195b",
            "route_table_id": "rtb-0e77967340b5a5e6e",
            "subnet_id": "subnet-0199527ba85eacb51"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-private",
            "aws_subnet.demo-3tier-private2",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e0610eda884a94c",
            "route_table_id": "rtb-0e77967340b5a5e6e",
            "subnet_id": "subnet-0a91d70737df87205"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-private",
            "aws_subnet.demo-3tier-private3",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e820dc0cec7e3e",
            "route_table_id": "rtb-0e77967340b5a5e6e",
            "subnet_id": "subnet-08f2dc67ec619a22f"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-private",
            "aws_subnet.demo-3tier-private4",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481292158f76cc69",
            "route_table_id": "rtb-055df6300a69a0bc4",
            "subnet_id": "subnet-0edcc8e6889ff3af0"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-public",
            "aws_subnet.demo-3tier-public1",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-3tier-rt-asso-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d6bc0b37172cd66",
            "route_table_id": "rtb-055df6300a69a0bc4",
            "subnet_id": "subnet-0f848816edab75f04"
          },
          "dependencies": [
            "aws_route_table.demo-3tier-rt-public",
            "aws_subnet.demo-3tier-public2",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-3tier-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:security-group/sg-05384f0de0a9179bc",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05384f0de0a9179bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-3tier-alb-sg",
            "name_prefix": "",
            "owner_id": "166484520035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-3tier"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-3tier-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:security-group/sg-09288d6df91eac5f6",
            "description": "Security Group for EC2 Auto Scaling Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09288d6df91eac5f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05384f0de0a9179bc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo-3tier-asg-sg",
            "name_prefix": "",
            "owner_id": "166484520035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_vpc.demo-3tier"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-3tier-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:security-group/sg-098c3a1a5da670447",
            "description": "Security Group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098c3a1a5da670447",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09288d6df91eac5f6"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "demo-3tier-rds-sg",
            "name_prefix": "",
            "owner_id": "166484520035",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_security_group.demo-3tier-asg-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-alb-sg-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-200677131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05384f0de0a9179bc",
            "security_group_rule_id": "sgr-031de7c7c8ceeda7f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-alb-sg-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1840559633",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05384f0de0a9179bc",
            "security_group_rule_id": "sgr-02fc763ec7b7a5d76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-asg-sg-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3395231973",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09288d6df91eac5f6",
            "security_group_rule_id": "sgr-00cded89a743d9572",
            "self": false,
            "source_security_group_id": "sg-05384f0de0a9179bc",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_security_group.demo-3tier-asg-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-asg-sg-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1188503863",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09288d6df91eac5f6",
            "security_group_rule_id": "sgr-0e26492bec9c42b66",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_security_group.demo-3tier-asg-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-rds-sg-inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-756465779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-098c3a1a5da670447",
            "security_group_rule_id": "sgr-072fc8ac4b7d95b4a",
            "self": false,
            "source_security_group_id": "sg-09288d6df91eac5f6",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_security_group.demo-3tier-asg-sg",
            "aws_security_group.demo-3tier-rds-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-3tier-rds-sg-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1487026757",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-098c3a1a5da670447",
            "security_group_rule_id": "sgr-030f4c914628e8088",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-3tier-alb-sg",
            "aws_security_group.demo-3tier-asg-sg",
            "aws_security_group.demo-3tier-rds-sg",
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-09b5128df38e2f5c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b5128df38e2f5c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-private1"
            },
            "tags_all": {
              "Name": "demo-3tier-private1"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-0199527ba85eacb51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0199527ba85eacb51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-private2"
            },
            "tags_all": {
              "Name": "demo-3tier-private2"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-0a91d70737df87205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91d70737df87205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-private3"
            },
            "tags_all": {
              "Name": "demo-3tier-private3"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-08f2dc67ec619a22f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f2dc67ec619a22f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-private4"
            },
            "tags_all": {
              "Name": "demo-3tier-private4"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-0edcc8e6889ff3af0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edcc8e6889ff3af0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-public1"
            },
            "tags_all": {
              "Name": "demo-3tier-public1"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo-3tier-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:subnet/subnet-0f848816edab75f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f848816edab75f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "166484520035",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-3tier-public2"
            },
            "tags_all": {
              "Name": "demo-3tier-public2"
            },
            "vpc_id": "vpc-094de4ad00360b732"
          },
          "dependencies": [
            "aws_vpc.demo-3tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-3tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:166484520035:vpc/vpc-094de4ad00360b732",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0360524229a78d48e",
            "default_route_table_id": "rtb-0f2e20c77df854979",
            "default_security_group_id": "sg-0641eed0fea701c51",
            "dhcp_options_id": "dopt-08931ec662642a65b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-094de4ad00360b732",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2e20c77df854979",
            "owner_id": "166484520035",
            "tags": {
              "Name": "demo-3tier"
            },
            "tags_all": {
              "Name": "demo-3tier"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}